Fixed navigation display on small devices

--- a/styles/css-styles/main--media-styles.scss
+++ b/styles/css-styles/main--media-styles.scss
@@ -9,38 +9,19 @@
     }
 
     #navigation {
-        display: flex;
-        flex-direction: column;
         align-items: center;
         justify-content: center;
         margin: auto;
         padding: auto 0;
-    }
-
-    .links {
-        margin: auto;
-    }
-
-    .link-divs {
-        display: flex;
-        padding: .2em;
-        justify-content: center;
         width: 100%;
     }
 
-    .link-divs:not(:last-child) {
-        position: relative;
-        padding-bottom: 0.2em;
+    .link-spans {
+        display: none;
     }
 
-    .link-divs:not(:last-child)::after {
-        content: '';
-        display: block;
-        width: 75%;
-        height: 1px;
-        background-color: $main-color;
-        position: absolute;
-        bottom: 0;
+    .link-divs {
+        margin: auto;
     }
 
 }
